--- a/templates/rtv.1
+++ b/templates/rtv.1
@@ -1,12 +1,10 @@
-.TH "RTV" "1" "September 2015" "Version 1.5" "Usage and Commands"
+.TH "RTV" "1" "{release_date}" "Version {version}" "Usage and Commands"
 .SH NAME
-rtv - Browse Reddit from your terminal
+RTV - Reddit Terminal Viewer
 .SH SYNOPSIS
-rtv [-h] [-s SUBREDDIT] [-l LINK] [--ascii] [--log FILE] [-u USERNAME] [--non-persistant] [--clear-auth]
+{synopsis}
 .SH DESCRIPTION
-.B Reddit Terminal Viewer
-is a lightweight browser for www.reddit.com built into a
-terminal window.
+{description}
 .SH OPTIONS
 .TP
 \fB\-h\fR, \fB\-\-help\fR
