--- a/rtv.1
+++ b/rtv.1
@@ -1,4 +1,4 @@
-.TH "RTV" "1" "June 14, 2016" "Version 1.9.1" "Usage and Commands"
+.TH "RTV" "1" "July 12, 2016" "Version 1.10.0" "Usage and Commands"
 .SH NAME
 RTV - Reddit Terminal Viewer
 .SH SYNOPSIS
@@ -72,6 +72,10 @@ for future sessions. You can disable this behavior by setting the option
 .BR RTV_EDITOR
 Text editor to use when editing comments and submissions. Will fallback to
 \fI$EDITOR\fR. 
+.TP
+.BR RTV_URLVIEWER
+Url Viewer to use to extract links from comments.  Requires a compatible 
+Url Viewer to be installed
 .TP
 .BR BROWSER
 Web browser to use when opening links.
