--- a/rtv.1
+++ b/rtv.1
@@ -1,4 +1,4 @@
-.TH "RTV" "1" "September 06, 2017" "Version 1.18.0" "Usage and Commands"
+.TH "RTV" "1" "October 24, 2017" "Version 1.19.0" "Usage and Commands"
 .SH NAME
 RTV - Reddit Terminal Viewer
 .SH SYNOPSIS
@@ -68,7 +68,7 @@ Press \fB?\fR to open the help screen.
 .TP
 .BR $XDG_CONFIG_HOME/rtv/rtv.cfg
 The configuration file can be used to customize default program settings, see
-README.rst for more information.
+README.md for more information.
 .TP
 .BR $XDG_CONFIG_HOME/rtv/refresh-token
 After you login to reddit, your most recent OAuth refresh token will be stored
