--- a/rtv.1
+++ b/rtv.1
@@ -1,10 +1,10 @@
-.TH "RTV" "1" "December 05, 2017" "Version 1.20.0" "Usage and Commands"
+.TH "RTV" "1" "December 31, 2017" "Version 1.21.0" "Usage and Commands"
 .SH NAME
 RTV - Reddit Terminal Viewer
 .SH SYNOPSIS
-rtv [\-h] [\-s SUBREDDIT] [\-\-log FILE] [\-\-config FILE] [\-\-ascii] [\-\-monochrome] [\-\-non\-persistent] [\-\-clear\-auth] [\-\-copy\-config] [\-\-copy\-mailcap] [\-\-enable\-media] [\-V] [URL]
+rtv [URL] [\-s SUBREDDIT]
 .SH DESCRIPTION
-Reddit Terminal Viewer is a lightweight browser for https://www.reddit.com
+RTV (Reddit Terminal Viewer) is a terminal interface to view and interact with reddit.
 .SH OPTIONS
 .TP
 \fBURL\fR
@@ -35,6 +35,14 @@ Enable ascii\-only mode
 Disable color
 
 .TP
+\fB\-\-theme FILE\fR
+Color theme to use, see \-\-list\-themes for valid options
+
+.TP
+\fB\-\-list\-themes\fR
+List all of the available color themes
+
+.TP
 \fB\-\-non\-persistent\fR
 Forget the authenticated user when the program exits
 
@@ -61,19 +69,24 @@ show program's version number and exit
 
 .SH CONTROLS
 Move the cursor using the arrow keys or vim style movement.
+.br
 Press \fBup\fR and \fBdown\fR to scroll through submissions.
+.br
 Press \fBright\fR to view the selected submission and \fBleft\fR to return.
+.br
 Press \fB?\fR to open the help screen.
 .SH FILES
 .TP
 .BR $XDG_CONFIG_HOME/rtv/rtv.cfg
-The configuration file can be used to customize default program settings, see
-README.md for more information.
+The configuration file can be used to customize default program settings.
 .TP
-.BR $XDG_CONFIG_HOME/rtv/refresh-token
+.BR $XDG_DATA_HOME/rtv/refresh-token
 After you login to reddit, your most recent OAuth refresh token will be stored
-for future sessions. You can disable this behavior by setting the option
-\fBpersistent=False\fR in your configuration file.
+for future sessions.
+.TP
+.BR $XDG_DATA_HOME/rtv/history.log
+This file stores URLs that have been recently opened in order to
+visually highlight them as "seen".
 .SH ENVIRONMENT
 .TP
 .BR RTV_EDITOR
