--- a/rtv.1
+++ b/rtv.1
@@ -1,4 +1,4 @@
-.TH "RTV" "1" "December 31, 2017" "Version 1.21.0" "Usage and Commands"
+.TH "RTV" "1" "March 08, 2018" "Version 1.22.0" "Usage and Commands"
 .SH NAME
 RTV - Reddit Terminal Viewer
 .SH SYNOPSIS
@@ -65,6 +65,10 @@ Open external links using programs defined in the mailcap config
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 show program's version number and exit
+
+.TP
+\fB\-\-no\-flash\fR
+Disable screen flashing
 
 
 .SH CONTROLS
