--- a/rtv.1
+++ b/rtv.1
@@ -1,4 +1,4 @@
-.TH "RTV" "1" "August 13, 2018" "Version 1.24.0" "Usage and Commands"
+.TH "RTV" "1" "February 03, 2019" "Version 1.25.0" "Usage and Commands"
 .SH NAME
 RTV - Reddit Terminal Viewer
 .SH SYNOPSIS
@@ -45,6 +45,10 @@ List all of the available color themes
 .TP
 \fB\-\-non\-persistent\fR
 Forget the authenticated user when the program exits
+
+.TP
+\fB\-\-no\-autologin\fR
+Do not authenticate automatically on startup
 
 .TP
 \fB\-\-clear\-auth\fR
