--- a/rtv.1
+++ b/rtv.1
@@ -1,4 +1,4 @@
-.TH "RTV" "1" "February 13, 2019" "Version 1.25.1" "Usage and Commands"
+.TH "RTV" "1" "March 04, 2019" "Version 1.26.0" "Usage and Commands"
 .SH NAME
 RTV - Reddit Terminal Viewer
 .SH SYNOPSIS
@@ -73,6 +73,10 @@ show program's version number and exit
 .TP
 \fB\-\-no\-flash\fR
 Disable screen flashing
+
+.TP
+\fB\-\-debug\-info\fR
+Show system and environment information and exit
 
 
 .SH CONTROLS
